src/objects/Marketing_Extract__c.object
<CustomObject>
    <description>This is created to store new members, new accounts, and new auto loans for marketing campaigns.</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Number</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipLabel>Person</relationshipLabel>
        <relationshipName>Marketing_Extract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <formula>CASE(Branch__c,
03, &apos;SanRamon&apos;,
04, &apos;Richmond&apos;,
05, &apos;Brea&apos;,
06, &apos;Covington&apos;,
09, &apos;ElSegundo&apos;,
14, &apos;1600Smith&apos;,
19, &apos;Aramco&apos;,
20, &apos;CaminoMedia&apos;,
21, &apos;KernRiver&apos;,
23, &apos;Pascagoula&apos;,
24, &apos;Bakersfield&apos;,
25, &apos;PostOak&apos;,
28, &apos;SaltLakeRefinery&apos;,
72, &apos;eBranch&apos;,
96, &apos;Direct Lending&apos;,  
201, &apos;SanFrancisco&apos;,
202, &apos;Galleria&apos;,
205, &apos;Reston&apos;,
206, &apos;Pleasant Hill&apos;,
207, &apos;Bountiful&apos;,
208, &apos;ElPaso&apos;,
&apos;&apos;)</formula>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>CASE(Account_Number__r.Created_At_Branch__c, 
03, 03,
04, 04,
05, 05,
06, 06,
09, 09,
14, 14,
19, 19,
20, 20,  
21, 21,
23, 23,
24, 24,
25, 25,
28, 28,
72, 72,
96, 96,
201, 201,
202, 202,
205, 205,
206, 206,
207, 207,
208, 208,
NULL)</formula>
        <label>Branch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>IF(Account_Number__r.Reference__c == &apos;BC01&apos;, &apos;Chevron&apos;, &apos;Spectrum&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF(1 = 1,
   IF(ISBLANK(Account_Number__r.Parent_Account__c) &amp;&amp; CONTAINS( Account_Number__r.SecureEmailAddress__c,&apos;@&apos;),
        &apos;dkottali@gmail.com&apos;, 
        IF(CONTAINS(Account_Number__r.Parent_Account__r.SecureEmailAddress__c,&apos;@&apos;),
              &apos;dkottali@gmail.com&apos;,
              &apos;&apos;
        )
   ),
   IF(ISBLANK(Account_Number__r.Parent_Account__c) &amp;&amp; CONTAINS( Account_Number__r.SecureEmailAddress__c,&apos;@&apos;),
        Account_Number__r.SecureEmailAddress__c, 
        IF(CONTAINS(Account_Number__r.Parent_Account__r.SecureEmailAddress__c,&apos;@&apos;),
              Account_Number__r.Parent_Account__r.SecureEmailAddress__c,
              &apos;&apos;
        )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epysis_User_ID__c</fullName>
        <formula>IF(1 = 1, 
   &apos;1538&apos;,
   Account_Number__r.Created_By_User_Episys__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Epysis User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_City__c, 
    Account_Number__r.Parent_Account__r.Mailing_City__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_Country_Code__c, 
    Account_Number__r.Parent_Account__r.Mailing_Country_Code__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_Country__c, 
    Account_Number__r.Parent_Account__r.Mailing_Country__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_State__c, 
    Account_Number__r.Parent_Account__r.Mailing_State__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_Street__c, 
    Account_Number__r.Parent_Account__r.Mailing_Street__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Code__c</fullName>
        <formula>IF(  Account_Number__r.RecType__c  = &apos;ACCT&apos;, 
    Account_Number__r.Mailing_Zipcode__c, 
    Account_Number__r.Parent_Account__r.Mailing_Zipcode__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>PersonID__r.FirstName &amp; &apos; &apos; &amp;PersonID__r.MiddleName  &amp; &apos; &apos; &amp;  PersonID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <externalId>true</externalId>
        <label>PersonAccount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Marketing_Extract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_ID_Number__c</fullName>
        <formula>PersonID__r.PersonID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( LEN(PersonID__r.PersonContact.Home_Phone__c) &lt;= 3 , 
   IF( LEN( PersonID__r.PersonContact.Mobile_Phone__c) &lt;= 3 , 
      IF( LEN( PersonID__r.PersonContact.Work_Phone__c ) &lt;= 3 , 
         &quot;&quot;,  
         &quot;W: &quot; &amp; PersonID__r.PersonContact.Work_Phone__c &amp; 
            IF( LEN( PersonID__r.PersonContact.Work_Phone_Extension__c) &lt; 2 , 
               &quot;&quot;, 
               &quot; Ext: &quot; &amp; PersonID__r.PersonContact.Work_Phone_Extension__c
            )
        ), 
      &quot;M: &quot; &amp; PersonID__r.PersonContact.Mobile_Phone__c
      ), 
    &quot;H: &quot; &amp; PersonID__r.PersonContact.Home_Phone__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Marketing Extract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Epysis_User_ID__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Branch__c</columns>
        <columns>Branch_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>PersonID__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountID__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Funded_Auto_Loan</fullName>
        <columns>NAME</columns>
        <columns>Epysis_User_ID__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>PersonID__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountID__c</columns>
        <columns>Brand__c</columns>
        <columns>Mailing_City__c</columns>
        <columns>Mailing_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Funded Auto Loan</value>
        </filters>
        <label>Funded Auto Loan</label>
    </listViews>
    <listViews>
        <fullName>My_Account</fullName>
        <columns>NAME</columns>
        <columns>Epysis_User_ID__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>PersonID__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountID__c</columns>
        <columns>Brand__c</columns>
        <columns>Mailing_City__c</columns>
        <columns>Mailing_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Number__c</field>
            <operation>contains</operation>
            <value>214414</value>
        </filters>
        <label>My Account</label>
    </listViews>
    <listViews>
        <fullName>New_Account</fullName>
        <columns>NAME</columns>
        <columns>Epysis_User_ID__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>PersonID__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountID__c</columns>
        <columns>Brand__c</columns>
        <columns>Mailing_City__c</columns>
        <columns>Mailing_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>New Account</value>
        </filters>
        <label>New Account</label>
    </listViews>
    <listViews>
        <fullName>New_Member</fullName>
        <columns>NAME</columns>
        <columns>Epysis_User_ID__c</columns>
        <columns>PersonAccount__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Person_ID_Number__c</columns>
        <columns>PersonID__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AccountID__c</columns>
        <columns>Brand__c</columns>
        <columns>Mailing_City__c</columns>
        <columns>Mailing_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>New Member</value>
        </filters>
        <label>New Member</label>
    </listViews>
    <nameField>
        <displayFormat>MRKX{00000000}</displayFormat>
        <label>Marketing Extract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Extract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>